--- a/index.html
+++ b/index.html
@@ -6,17 +6,33 @@
     <title></title>
   </head>
   <body>
-<! ----------header fixed start ----------------- !>
+<! ---------- header fixed start ----------------- !>
     <header>
-      <h1 class="title">Linux</h1>
-      <h2>Shortcuts</h2>
+        <h1 class="title">Linux</h1>
+        <h2>Shortcuts</h2>
     </header>
     <div class="triangle">
-      <p></p>
+        <p></p>
     </div>
-    <! ----------header fixed end ----------------- !>
+    <! ---------- header fixed end ----------------- !>
+    <! ---------- Articles start ----------------- !>
     <div class="row">
 
+            <h3 class="marge">Introduction</h3>
+              <p>
+                  raccourcis clavier standard pour GNOME 3 OS et les applications.
+            </p>
+            <h3>Raccourcis et Actions</h3>
+            <p>
+              <span class="textedit">Super, Super+s</span><span class="padding">Entrez dans l'aperçu </span>
+            </p>
+            <p>
+              <span class="textedit">Super+A</span><span class="padding">Entrez "Afficher Applications" </span>
+            </p>
+            <p>
+              <span class="textedit">Super+f10</span><span class="padding">Menu Application Access </span>
+            </p>
     </div>
+    <! ---------- Artcles  end ----------------- !>
   </body>
 </html>
