add more content shortcuts

--- a/index.html
+++ b/index.html
@@ -32,6 +32,35 @@
             <p>
               <span class="textedit">Super+f10</span><span class="padding">Menu Application Access </span>
             </p>
+            <p>
+              <span class="textedit">Tab</span><span class="padding">Switch d'application en mode aperçu </span>
+            </p>
+            <p>
+              <span class="textedit">Super+haut & super+bas</span><span class="padding">Basculer la fenêtre en mode maximisé / fenêtré</span>
+            </p>
+            <p>
+              <span class="textedit">Super+gauche</span><span class="padding">Basculer la fenêtre à gauche</span>
+            </p>
+            <p>
+              <span class="textedit">Super+droite</span><span class="padding">Basculer la fenêtre à droite</span>
+            </p>
+            <p>
+              <span class="textedit">Super+H</span><span class="padding">Masquer la fenêtre</span>
+            </p>
+            <p>
+              <span class="textedit">Super+PgDown</span><span class="padding">Passez au prochain espace de travail</span>
+            </p>
+            <p>
+              <span class="textedit">Super+PgUp</span><span class="padding">Passez à l'espace de travail précédent</span>
+            </p>
+            <p>
+              <span class="textedit">Super+home</span><span class="padding">Passez au premier espace de travail</span>
+            </p>
+            <p>
+              <span class="textedit">Super+Fin</span><span class="padding">Passez au dernier espace de travail</span>
+            </p>
+
+
     </div>
     <! ---------- Artcles  end ----------------- !>
   </body>
