--- a/index.html
+++ b/index.html
@@ -59,9 +59,22 @@
             <p>
               <span class="textedit">Super+Fin</span><span class="padding">Passez au dernier espace de travail</span>
             </p>
+            <p>
+              <span class="textedit">Super+Shift+PgDown</span><span class="padding">Déplacer la fenêtre dans l'espace de travail suivant</span>
+            </p>
+            <p>
+              <span class="textedit">Super+Shift+PgUp</span><span class="padding">Déplacer la fenêtre dans l'espace de travail précédent</span>
+            </p>
+            <p>
+              <span class="textedit">Super+Tab</span><span class="padding">Passer à l'application suivante</span>
+            </p>
+            <p>
+              <span class="textedit">Super+Shift+Tab</span><span class="padding">Passer à l'application précédente</span>
+            </p>
+
 
 
     </div>
-    <! ---------- Artcles  end ----------------- !>
+    <! ---------- Articles  end ----------------- !>
   </body>
 </html>
