add content html

--- a/index.html
+++ b/index.html
@@ -71,9 +71,15 @@
             <p>
               <span class="textedit">Super+Shift+Tab</span><span class="padding">Passer à l'application précédente</span>
             </p>
-
-
-
+            <p>
+              <span class="textedit">Super+Espace</span><span class="padding">Changer de clavier</span>
+            </p>
+            <p>
+              <span class="textedit">Super+M</span><span class="padding">Affiche les messages de notification</span>
+            </p>
+            <p>
+              <span class="textedit">Super+Espace</span><span class="padding">Changer de clavier</span>
+            </p>
     </div>
     <! ---------- Articles  end ----------------- !>
   </body>
