Add more and more content on html

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               <span class="textedit">Super+M</span><span class="padding">Affiche les messages de notification</span>
             </p>
             <p>
-              <span class="textedit">Super+Espace</span><span class="padding">Changer de clavier</span>
+              <span class="textedit">PrintScr</span><span class="padding">Prendre une capture d'écran</span>
             </p>
     </div>
     <! ---------- Articles  end ----------------- !>
