Little commit for Thierry <3

--- a/index.html
+++ b/index.html
@@ -80,6 +80,28 @@
             <p>
               <span class="textedit">PrintScr</span><span class="padding">Prendre une capture d'écran</span>
             </p>
+            <p>
+              <span class="textedit">Alt+PrintScr</span><span class="padding">Prendre une capture de la fenêtre</span>
+            </p>
+            <p>
+              <span class="textedit">Shift+PrintScr</span><span class="padding">Prendre une capture d'une region</span>
+            </p>
+            <p>
+              <span class="textedit">Ctrl+Alt+Maj+R</span><span class="padding">Capture vidéo</span>
+            </p>
+            <p>
+              <span class="textedit">Ctrl+Alt+Del</span><span class="padding">Eteindre</span>
+            </p>
+            <p>
+              <span class="textedit">Super+L</span><span class="padding">Verrouiller son écran</span>
+            </p>
+            <p>
+              <span class="textedit">Alt+F2</span><span class="padding">Parcourir la console</span>
+            </p>
+            <p>
+              <span class="textedit">Super+Espace</span><span class="padding">Changer de clavier</span>
+            </p>
+
     </div>
     <! ---------- Articles  end ----------------- !>
   </body>
