--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
     <! ---------- header fixed end ----------------- !>
     <! ---------- Articles start ----------------- !>
     <div class="row">
+        <div class="intro">
 
             <h3 class="marge">Introduction</h3>
               <p>
                   raccourcis clavier standard pour GNOME 3 OS et les applications.
             </p>
+          </div>
+
             <h3>Raccourcis et Actions</h3>
             <p>
               <span class="textedit">Super, Super+s</span><span class="padding">Entrez dans l'aperçu </span>
@@ -98,11 +101,10 @@
             <p>
               <span class="textedit">Alt+F2</span><span class="padding">Parcourir la console</span>
             </p>
-            <p>
-              <span class="textedit">Super+Espace</span><span class="padding">Changer de clavier</span>
-            </p>
 
+            <h1 class="thanks">thanks <br> for <br>reading</h1>
     </div>
     <! ---------- Articles  end ----------------- !>
+
   </body>
 </html>
