--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <body>
 <! ---------- header fixed start ----------------- !>
     <header>
-        <h1 class="title">Linux</h1>
-        <h2>Shortcuts</h2>
+        <h1 class="title">Linux Shortcuts</h1>
     </header>
     <div class="triangle">
         <p></p>
@@ -104,7 +103,12 @@
 
             <h1 class="thanks">thanks <br> for <br>reading</h1>
     </div>
-    <! ---------- Articles  end ----------------- !>
 
+    <! ---------- Articles  end ----------------- !>
+    <! ---------- Footer start ----------------- !>
+
+<footer></footer>
+
+    <! ---------- Footer  end ----------------- !>
   </body>
 </html>
