commit before the break

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
 <! ---------- header fixed start ----------------- !>
     <header>
-        <h1 class="title">Linux Shortcuts</h1>
+        <h1 class="title">Linux <span class="media">Shortcuts</span></h1>
     </header>
     <div class="triangle">
         <p></p>
@@ -107,7 +107,11 @@
     <! ---------- Articles  end ----------------- !>
     <! ---------- Footer start ----------------- !>
 
-<footer></footer>
+<footer>
+  <p class="copy">
+        © 2016. Christophe Parmentier
+  </p>
+</footer>
 
     <! ---------- Footer  end ----------------- !>
   </body>
