--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
-    <title></title>
+    <title>Linux cheat sheet</title>
   </head>
   <body>
 <! ---------- header fixed start ----------------- !>
